[package]
name = "bulletproofs_ipa"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.0"
merlin = "3.0.0"
ark-relations = "0.4.0"
ark-crypto-primitives = { version = "0.4", features = [
    "crh",
    "r1cs",
    "sponge",
] }
ark-r1cs-std = "0.4"
sha2 = "0.10"
